<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:padding="@dimen/spacing_sm"
    tools:context=".ui.photo.PhotoCaptureActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_prompt_title"
        android:textAppearance="@style/TextAppearance.Trackr.ScreenTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imagePreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_sm"
        android:background="?attr/colorSurfaceVariant"
        android:contentDescription="@string/content_description_session_photo"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Trackr.HeroImage"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/buttonRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTakePhoto"
            style="@style/Widget.Trackr.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_xs"
            android:layout_weight="1"
            android:text="@string/take_photo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSecondary"
            style="@style/Widget.Trackr.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xs"
            android:layout_weight="1"
            android:text="@string/skip" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
