<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:padding="@dimen/spacing_sm"
    tools:context=".ui.tracking.TrackingActivity">

    <TextView
        android:id="@+id/textActivityType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Trackr.ScreenTitle"
        tools:text="Run"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/weatherCard"
        layout="@layout/weather_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textActivityType" />

    <LinearLayout
        android:id="@+id/statsGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weatherCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include
                android:id="@+id/statElapsed"
                layout="@layout/stat_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_xs"
                android:layout_weight="1" />

            <include
                android:id="@+id/statSteps"
                layout="@layout/stat_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_xs"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs"
            android:orientation="horizontal">

            <include
                android:id="@+id/statDistance"
                layout="@layout/stat_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_xs"
                android:layout_weight="1" />

            <include
                android:id="@+id/statCalories"
                layout="@layout/stat_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_xs"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textPermissionWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/location_permission_required"
        android:textAppearance="@style/TextAppearance.Trackr.Body"
        android:textColor="@color/trackr_danger"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statsGrid"
        tools:visibility="visible" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mapCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_sm"
        app:cardBackgroundColor="?attr/colorSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@id/buttonRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPermissionWarning"
        app:strokeColor="?attr/colorSurfaceVariant"
        app:strokeWidth="1dp">

        <org.osmdroid.views.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_route_map" />

        <LinearLayout
            android:id="@+id/waitingForFixGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSurfaceVariant"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <ProgressBar
                android:id="@+id/progressWaitingForFix"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_waiting_for_fix"
                android:indeterminateTint="?attr/colorPrimary" />

            <TextView
                android:id="@+id/textRouteEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs"
                android:text="@string/waiting_for_gps"
                android:textAppearance="@style/TextAppearance.Trackr.BodyMuted" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/buttonRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonStart"
            style="@style/Widget.Trackr.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_xs"
            android:layout_weight="1"
            android:text="@string/start" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonStop"
            style="@style/Widget.Trackr.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xs"
            android:layout_weight="1"
            android:text="@string/stop" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
